fixed glitch on the about page where the image never resized smaller on safari (I hate safari).  animated header so truck drives in and bounces per Chris' request.

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -7004,7 +7004,7 @@ html {
   box-sizing: inherit; }
 
 body {
-  margin-top: 79px; }
+  margin-top: 70px; }
   @media (min-width: 768px) {
     body {
       margin-top: 45px; } }
@@ -7136,16 +7136,14 @@ button:hover,
 
 .logo-container {
   width: 100vw;
-  padding-top: 7px;
-  padding-bottom: 7px;
-  background: #fff; }
+  margin-top: 25px; }
 
 .lg-logo-wrapper {
   width: 100%;
   height: 225px;
   margin: auto;
   padding-bottom: 7px;
-  background: url("../img/myPieLogoWide.svg") no-repeat;
+  background: url("../img/animate/myPieLogoWide.svg") no-repeat;
   background-position: center center;
   background-size: cover;
   object-fit: cover;
@@ -7154,9 +7152,44 @@ button:hover,
 @media screen and (min-width: 1750px) {
   .lg-logo-wrapper {
     height: 330px; } }
-.lg-logo-wraper img {
-  width: 100%; }
+.truck-wrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 150px;
+  height: auto;
+  transform: translate(-50%, -50%); }
+  @media screen and (min-width: 1750px) {
+    .truck-wrapper {
+      width: 200px; } }
 
+.svg-style {
+  height: 70px;
+  position: absolute;
+  top: 55px;
+  left: 46vw;
+  z-index: 1; }
+
+.animated {
+  animation-duration: 2s;
+  animation-delay: .25s;
+  animation-fill-mode: both;
+  animation-name: truckLogoIn;
+  animation-timing-function: ease-in;
+  animation-iteration-count: 1; }
+
+@keyframes truckLogoIn {
+  0% {
+    opacity: 1;
+    transform: translate3d(-90vw, 0, 0) skewX(-30deg); }
+  60% {
+    transform: skewX(20deg); }
+  80% {
+    opacity: 1;
+    transform: skewX(-5deg); }
+  100% {
+    transform: translateZ(0); } }
 #footer {
   color: #fff; }
   #footer a {
@@ -7606,30 +7639,27 @@ button, [type='button']:hover, [type='reset']:hover, [type='submit']:hover {
   margin-right: auto;
   margin-left: auto; }
 
+#about-main h1 {
+  margin-bottom: 1rem; }
+  @media screen and (min-width: 768px) {
+    #about-main h1 {
+      margin-bottom: 6rem; } }
 #about-main .about-img {
-  margin-right: 1rem;
-  margin-bottom: 0.5rem;
+  width: 100%;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
-  width: 100%; }
-  @supports (clip-path: circle()) {
+  margin: auto;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.5); }
+  @media screen and (min-width: 768px) {
     #about-main .about-img {
       float: left;
-      width: 50%; } }
-@supports (clip-path: circle()) {
-  #about-main h1 {
-    margin-bottom: 6rem; } }
-@supports (clip-path: circle()) {
-  #about-main p:first-of-type {
-    margin-top: -5rem; } }
-@media screen and (max-width: 414px) {
-  #about-main .about-img {
-    all: unset;
-    width: 100%;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.5); }
-  #about-main h1 {
-    margin-bottom: 1rem; }
-  #about-main p:first-of-type {
-    margin-top: 1rem; } }
+      width: 50%;
+      margin-right: 1rem;
+      margin-bottom: 1rem; } }
+#about-main p:first-of-type {
+  margin-top: 1rem; }
+  @media screen and (min-width: 768px) {
+    #about-main p:first-of-type {
+      margin-top: -5rem; } }
 
 #events-main {
   margin-top: 1rem; }
