--- a/sass/_globals.scss
+++ b/sass/_globals.scss
@@ -2,6 +2,7 @@
 // HTML Styles
 html {
   box-sizing: border-box;
+ 
 }
 
 *,
@@ -11,7 +12,7 @@ html {
 }
 
 body {
-  margin-top: 79px;
+  margin-top: 70px;
 
   @media (min-width: 768px) {
     margin-top: 45px;
@@ -165,34 +166,3 @@ button:hover,
   -moz-transform: translateY(-0.4em) rotate(-135deg);
   -webkit-transform: translateY(-0.4em) rotate(-135deg);
 }
-
-// Header 
-// Logo Styles 
-.logo-container {
-  width: 100vw;
-  @include padding(7px null 7px null);
-  background: $mypie-light;
-}
-
-.lg-logo-wrapper {
-  width: 100%;
-  height: 225px;
-  margin: auto;
-  @include padding(null null 7px);
-  background: url("../img/myPieLogoWide.svg") no-repeat;
-  background-position: center center;
-  background-size: cover;
-  object-fit: cover;
-  position: relative;
-}
-
-@media screen and (min-width: 1750px) {
-  .lg-logo-wrapper {
-    height: 330px;
-  }
-}
-
-.lg-logo-wraper img {
-  width: 100%;
-}
-
