--- a/sass/elements/_header.scss
+++ b/sass/elements/_header.scss
@@ -1,22 +1,20 @@
 // Header 
-
-
 // Logo Styles 
 .logo-container {
   width: 100vw;
   @include margin(25px null null);
-  @include padding(null null 7px null);
-  background: white; 
-} 
-  
-  .lg-logo-wrapper { 
-    width: 100%; height: 225px; margin: auto;
+}
+
+.lg-logo-wrapper {
+  width: 100%;
+  height: 225px;
+  margin: auto;
   @include padding(null null 7px);
-  background: url("../img/myPieLogoWide.svg") no-repeat;
+  background: url("../img/animate/myPieLogoWide.svg") no-repeat;
   background-position: center center;
   background-size: cover;
   object-fit: cover;
-  position: relative;
+  position: relative; 
 }
 
 @media screen and (min-width: 1750px) {
@@ -25,6 +23,52 @@
   }
 }
 
-.lg-logo-wraper img {
-  width: 100%;
+.truck-wrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 150px;
+  height: auto;
+  transform: translate(-50%, -50%);
+  @media screen and (min-width: 1750px){
+    width: 200px;
+  }
+}
+
+.svg-style {
+  height: 70px;
+  position: absolute;
+  top: 55px;
+  left: 46vw;
+  z-index: 1;
+}
+
+.animated {
+  animation-duration: 2s;
+  animation-delay: .25s;
+  animation-fill-mode: both;
+  animation-name: truckLogoIn;
+  animation-timing-function: ease-in;
+  animation-iteration-count: 1;
+}
+
+@keyframes truckLogoIn {
+  0% {
+    opacity: 1;
+    transform: translate3d(-90vw, 0, 0) skewX(-30deg);
+  }
+
+  60% {
+    transform: skewX(20deg);
+  }
+
+  80% {
+    opacity: 1;
+    transform: skewX(-5deg);
+  }
+
+  100% {
+    transform: translateZ(0);
+  }
 }
